--- a/templates/files.html
+++ b/templates/files.html
@@ -1,18 +1,20 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>projects</title>
-	</head>
-	<body>
-		<ul>
-			{% for file in files %} 
-			<li> 
-				<a href="{{ (request.path + '/' if request.path != '/' else '') + file }}"> {{ (request.path + '/' if request.path != '/' else '') + file }} 
-				</a>
-			</li> 
-			{% endfor %} 
-		</ul>
-	</body>
-</html>
+{%extends "base.html"%}
+{%block title%}directory{%endblock%}
+{%block content%}
+<table>
+	<tr>
+		<th>name</th>
+		<th>created time</th>
+		<th>modified time</th>
+		<th>size</th>
+	</tr>
+	{%for file in files%}
+	<tr>
+		<td><a href="{{(request.path + '/' if request.path != '/' else '') + file}}">{{file}}</a></td>
+		<td>{{fromtimestamp(getmtime(path + "/" + request.path[7:] + "/" + file))}}</td>
+		<td>{{fromtimestamp(getctime(path + "/" + request.path[7:] + "/" + file))}}</td>
+		<td>{{size(getsize(path + "/" + request.path[7:] + "/" + file),system=alternative)}}</td>
+	</tr>
+	{%endfor%}
+</table>
+{%endblock%}
