--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,17 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
-		<title>zakiweb</title>
-	</head>
-	<body>
-		<h1>test: change text id 'test' to your input</h1>
-		<p id="test">test for now</p>
-		<label for="input">text</label>
-		<input type="text" id="input">
-		<button onclick="change()">change</button><br>
-		<label for="color">color: </label>
-		<select id="color" onchange="onChange()">
-			<option value="#00000">black</option>
-			<option value="red">red</option>
-			<option value="blue">blue</option>
-			<option value="green">green</option>
-		</select>
-		<script src="{{ url_for('static', filename='js/index.js')|autoversion }}"></script>
-	</body>
-</html>
+{%extends "base.html"%}
+{%block title%}main{%endblock%}
+{%block content%}
+<h1>test: change text id 'test' to your input</h1>
+<p id="test">test for now</p>
+<label for="input">text</label>
+<input type="text" id="input">
+<button onclick="change()">change</button><br>
+<label for="color">color: </label>
+<select id="color" onchange="onChange()">
+	<option value="#00000">black</option>
+	<option value="red">red</option>
+	<option value="blue">blue</option>
+	<option value="green">green</option>
+</select>
+<script src="{{ url_for('static', filename='js/index.js')|autoversion }}"></script>
+{%endblock%}
