--- a/templates/files.html
+++ b/templates/files.html
@@ -17,4 +17,8 @@
 	</tr>
 	{%endfor%}
 </table>
+<form action="{{url_for('upload')}}?dir={{path + '/' + request.path[7:] + '/' + file}}" method="POST">
+	<input type="file" value="file"\>
+	<input type="submit" value="submit"\>
+</form>
 {%endblock%}
